// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<nav
  className="navbar navbar-inverse navbar-static-top"
  style={
    Object {
      "border": 0,
    }
  }
>
  <div
    className="container-fluid"
  >
    <div
      className="navbar-header"
    >
      <a
        className="navbar-brand"
        href="https://data.world/integrations/chart-builder"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="data.world logo"
          src="logo.png"
          style={
            Object {
              "height": 30,
              "marginLeft": "-0.5rem",
              "marginTop": 13,
              "width": 30,
            }
          }
        />
      </a>
      <p
        className="navbar-text"
        style={
          Object {
            "marginLeft": "0.75rem",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#a3afbf",
            }
          }
        >
          chart-builder
        </span>
      </p>
    </div>
    <p
      className="navbar-text navbar-right"
    >
      <a
        className="navbar-link"
        href="https://data.world"
      >
        Back to data.world
      </a>
    </p>
  </div>
</nav>
`;

exports[`renders with dataset 1`] = `
<nav
  className="navbar navbar-inverse navbar-static-top"
  style={
    Object {
      "border": 0,
    }
  }
>
  <div
    className="container-fluid"
  >
    <div
      className="navbar-header"
    >
      <a
        className="navbar-brand"
        href="https://data.world/integrations/chart-builder"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="data.world logo"
          src="logo.png"
          style={
            Object {
              "height": 30,
              "marginLeft": "-0.5rem",
              "marginTop": 13,
              "width": 30,
            }
          }
        />
      </a>
      <p
        className="navbar-text"
        style={
          Object {
            "marginLeft": "0.75rem",
          }
        }
      >
        <span
          style={
            Object {
              "color": "white",
            }
          }
        >
          foo/bar
        </span>
        <span
          style={
            Object {
              "color": "#a3afbf",
            }
          }
        >
          /chart-builder
        </span>
      </p>
    </div>
    <p
      className="navbar-text navbar-right"
    >
      <a
        className="navbar-link"
        href="https://data.world/foo/bar"
      >
        Back to data.world
      </a>
    </p>
  </div>
</nav>
`;
